[package]
name = "dfu-core"
version = "0.4.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Sans IO core library (traits and tools) for DFU"
repository = "https://github.com/dfu-rs/dfu-core"
homepage = "https://github.com/dfu-rs/dfu-core"
documentation = "https://docs.rs/dfu-core"
readme = "README.md"
keywords = ["dfu", "sans-io", "nostd"]

[dependencies]
bytes = "1"
displaydoc = "0.2"
log = "0.4"
pretty-hex = "0.3"
thiserror = { version = "1", optional = true }

[dev-dependencies]
thiserror = "1"

[features]
std = ["thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
